added highlight-box component

--- a/formuladb-editor/editor.html
+++ b/formuladb-editor/editor.html
@@ -302,7 +302,7 @@
 					</div>
 
 					<!-- add section box -->
-					<div id="add-section-box" class="drag-elements">
+					<div id="add-section-box" class="drag-elements" style="width: 75vw; height: 45vh">
 
 						<div class="header">
 							<ul class="nav nav-tabs" id="box-elements-tabs" role="tablist">
@@ -342,7 +342,7 @@
 
 							</div>
 
-							<div class="tab-content">
+							<!-- <div class="tab-content">
 								<div class="tab-pane fade show active" id="box-components" role="tabpanel" aria-labelledby="components-tab">
 
 									<div class="search">
@@ -384,7 +384,7 @@
 
 								</div>
 
-								<!-- div class="tab-pane fade" id="box-properties" role="tabpanel" aria-labelledby="blocks-tab">
+								div class="tab-pane fade" id="box-properties" role="tabpanel" aria-labelledby="blocks-tab">
 												<div class="component-properties-sidepane">
 													<div>
 														<div class="component-properties">
@@ -392,10 +392,10 @@
 														</div>
 													</div>
 												</div>
-											</div -->
-							</div>
+											</div>
+							</div> -->
 						</div>
-
+						<iframe style="width: 70vw; height: 40vh" src="/formuladb-themes/components-and-blocks.html"></iframe>
 					</div>
 					<!-- //add section box -->
 				</div>
