js components code from vvvebjs compiles as ts code

--- a/test/test.html
+++ b/test/test.html
@@ -45,13 +45,6 @@
         body {
             padding-left: 16vw;
         }
-        frmdb-dom-tree {
-            position: fixed;
-            top: 40px;
-            left: 0;
-            width: 16vw;
-            height: 50vh;
-        }
         .container {
             max-width: 960px;
         }
@@ -287,8 +280,7 @@
             </div>
         </div>
     </footer>
-    <frmdb-highlight-box root-element="body"></frmdb-highlight-box>
-    <frmdb-dom-tree root-element="body"></frmdb-dom-tree>
+    <frmdb-editor root-element="body"></frmdb-editor>
     <script src="/formuladb/frmdb-editor.js"></script>
 </body>
 
