--- a/formuladb-editor/editor.html
+++ b/formuladb-editor/editor.html
@@ -99,7 +99,7 @@
 			</div>
 
 			<div class="btn-group mr-3" role="group">
-				<button class="btn btn-light" title="Save Page" id="save-btn" data-vvveb-action="saveAjax">
+				<button class="btn btn-light" title="Save Page" id="save-btn">
 					<i class="la la-save"></i>
 				</button>
 				<button disabled class="btn btn-light" title="Publish to live environment" id="publish-btn" data-vvveb-action="saveApp">
@@ -399,7 +399,7 @@
 					</div>
 					<!-- //add section box -->
 				</div>
-				<iframe src="about:none" id="iframe1"></iframe>
+				<iframe src="about:none" id="iframe-page"></iframe>
 			</div>
 
 
@@ -1008,52 +1008,12 @@
 	</div>
 
 	<!-- bootstrap -->
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-	<script src="js/jquery.hotkeys.js"></script>
-
-	<!-- builder code-->
-	<script src="libs/builder/builder.js"></script>
-	<!-- undo manager-->
-	<script src="libs/builder/undo.js"></script>
-	<!-- inputs-->
-	<script src="libs/builder/inputs.js"></script>
-
-	<!-- bootstrap colorpicker //uncomment bellow scripts to enable -->
-	<!--
-<script src="libs/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js"></script>
-<link href="libs/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet">
-<script src="libs/builder/plugin-bootstrap-colorpicker.js"></script>
--->
-
-	<!-- components-->
-	<!-- <script src="libs/builder/components-server.js"></script> -->
-	<script src="libs/builder/components-bootstrap4.js"></script>
-	<script src="libs/builder/components-widgets.js"></script>
-
-	<!-- blocks-->
-	<script src="libs/builder/blocks-bootstrap4.js"></script>
-
-	<!-- plugins -->
-
-	<!-- code mirror - code editor syntax highlight -->
-	<link href="libs/codemirror/lib/codemirror.css" rel="stylesheet" />
-	<link href="libs/codemirror/theme/material.css" rel="stylesheet" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.3.0/css/flag-icon.min.css" rel="stylesheet" />
-	<script src="libs/codemirror/lib/codemirror.js"></script>
-	<script src="libs/codemirror/lib/xml.js"></script>
-	<script src="libs/codemirror/lib/formatting.js"></script>
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.2/mode/yaml/yaml.min.js" integrity="sha256-G1Y7WHjmBIbgQctjcuj64V2zVyIS6EVUj4PaIneJcDc="
-		crossorigin="anonymous"></script>
-	<script src="libs/builder/plugin-codemirror.js"></script> -->
+	<script src="/formuladb-static/plugins/vendor/js/jquery-3.3.1.slim.min.js"></script>
+	<script src="/formuladb-static/plugins/vendor/js/popper.min.js"></script>
+	<script src="/formuladb-static/plugins/vendor/js/bootstrap.min.js"></script>
 
 	<script src="/formuladb/frmdb-editor.js"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.10.1/beautify-html.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/3.13.1/js-yaml.min.js" integrity="sha256-ry6nlLQ1JmRl5RUPQ4eSuaSp/rGNPvl144WHHs7BiNE="
 		crossorigin="anonymous"></script>
 
