not using decorator for frmdb-data-grid; table switching works; had to switch from :focus base dropdowns to :hover because click events were not firing

--- a/formuladb-editor/editor.html
+++ b/formuladb-editor/editor.html
@@ -60,7 +60,7 @@
 	<div id="vvveb-builder">
 
 		<div id="data-grid">
-			<frmdb-data-grid data-frmdb-attr="table_name:$frmdb.selectedTableId" expand_row="#edit-record-modal" no_floating_filter="true"></frmdb-data-grid>
+			<frmdb-data-grid data-frmdb-attr="table-name:$frmdb.selectedTableId" expand_row="#edit-record-modal" no_floating_filter="true"></frmdb-data-grid>
 		</div>
 
 		<div id="top-panel">
