--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -35,7 +35,7 @@
             </div>
 
             <frmdb-theme-customizer></frmdb-theme-customizer>
-            
+
             <div class="btn-group mr-3" role="group">
                 <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
                     <button class="btn btn-sm" id="frmdb-editor-i18n-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -83,9 +83,11 @@
             <!-- <a class="btn btn-sm btn-outline-light m-2" href="javascript:void(0)" data-frmdb-action="showIntroVideoModal"><i class="la la-info"></i></a> -->
         </div>
 
-        <ul class="nav flex-row pl-1 border-bottom" style="min-height: 28px;">
+        <ul class="nav flex-row flex-nowrap pl-1 border-bottom" style="min-height: 28px;">
             <li class="nav-item">
-                <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">Table</a>
+                <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">
+                    <i class="la la-table"></i>
+                </a>
             </li>
             <li class="nav-item dropdown frmdb-dropdown-hover flex-grow-1">
                 <a href="javascript:void(0)" class="nav-link dropdown-toggle text-primary text-center" aria-haspopup="true" aria-expanded="false"
@@ -108,9 +110,11 @@
             </li>
         </ul>
 
-        <ul class="nav flex-row pl-1" style="min-height: 28px;">
+        <ul class="nav flex-row flex-nowrap pl-1" style="min-height: 28px;">
             <li class="nav-item">
-                <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">Page</a>
+                <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">
+                    <i class="la la-image"></i>
+                </a>
             </li>
             <li class="nav-item dropdown flex-grow-1 frmdb-dropdown-hover">
                 <a href="javascript:void(0)" class="nav-link dropdown-toggle text-center" role="button" aria-haspopup="true" aria-expanded="false"
@@ -138,7 +142,7 @@
 
         <frmdb-element-editor></frmdb-element-editor>
     </div>
-    <div id="canvas" class="position-relative">
+    <div id="canvas" class="position-relative overflow-hidden">
         <iframe></iframe>
         <frmdb-highlight-box></frmdb-highlight-box>
     </div>
@@ -151,6 +155,204 @@
     <script src="/formuladb/frmdb-editor.js"></script>
     <link rel="stylesheet" href="/formuladb-themes/_css/frmdb-theme-preview.css">
 
-</body>
+    <!-- new page modal-->
+    <div class="modal fade" id="new-page-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
 
+            <form>
+
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <p class="modal-title text-primary"><i class="la la-lg la-file"></i> New page</p>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
+                        </button>
+                    </div>
+
+                    <div class="modal-body text">
+                        <div class="form-group row" data-key="type">
+                            <label class="col-sm-3 control-label">
+                                Template
+                                <abbr class="badge badge-pill badge-secondary" title="This template will be used as a start">?</abbr>
+                            </label>
+                            <div class="col-sm-9 input">
+                                <div>
+                                    <select class="form-control custom-select" name="startTemplateUrl">
+                                        <option class="dropdown-item" data-frmdb-table="$frmdb.pages[]" data-frmdb-value="$frmdb.pages[].name"
+                                            data-frmdb-attr="value::$frmdb.pages[].url"></option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group row" data-key="href">
+                            <label class="col-sm-3 control-label">Page name</label>
+                            <div class="col-sm-9 input-group">
+                                <input name="title" type="text" class="form-control" placeholder="new-page-name" required pattern="[-a-zA-Z]+"
+                                    oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '-')">
+                                <div class="input-group-append">
+                                    <div class="input-group-text">.html</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="alert alert-danger" role="alert" style="display: none">
+                            A simple danger alert—check it out!
+                        </div>
+
+                    </div>
+
+                    <div class="modal-footer">
+                        <button class="btn btn-primary btn-lg" type="submit"><i class="la la-check"></i> Create page</button>
+                        <button class="btn btn-secondary btn-lg" type="reset" data-dismiss="modal"><i class="la la-close"></i> Cancel</button>
+                    </div>
+                </div>
+
+            </form>
+
+        </div>
+    </div>
+
+    <!-- new Table modal-->
+    <div class="modal fade" id="new-table-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+
+            <form>
+
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <p class="modal-title text-primary"><i class="la la-lg la-table"></i> New Table</p>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
+                        </button>
+                    </div>
+
+                    <div class="modal-body text">
+
+                        <div class="form-group row" data-key="href">
+                            <label class="col-sm-3 control-label">Table name</label>
+                            <div class="col-sm-9 input">
+                                <div>
+                                    <input name="tableName" type="text" class="form-control" placeholder="New_Table_Name" required pattern="[a-zA-Z_]+"
+                                        oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '_')">
+                                </div>
+
+                                <div class="alert alert-danger" role="alert" style="display: none">
+                                    A simple danger alert—check it out!
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="modal-footer">
+                        <button class="btn btn-primary btn-lg" type="submit"><i class="la la-check"></i> Create Table</button>
+                        <button class="btn btn-secondary btn-lg" type="reset" data-dismiss="modal"><i class="la la-close"></i> Cancel</button>
+                    </div>
+                </div>
+
+            </form>
+
+        </div>
+    </div>
+
+
+    <!-- new Column modal-->
+    <div class="modal fade" id="new-column-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+
+            <form>
+
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <p class="modal-title text-primary"><i class="la la-lg la-table"></i> New Column for table <span data-frmdb-value="selectedTableName">
+                        </p>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
+                        </button>
+                    </div>
+
+                    <div class="modal-body text">
+
+                        <div class="form-group row" data-key="href">
+                            <label class="col-sm-3 control-label">Column name</label>
+                            <div class="col-sm-9 input">
+                                <div>
+                                    <input name="columnName" type="text" class="form-control" placeholder="new_column_name" required pattern="[a-zA-Z_]+"
+                                        oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '_')">
+                                </div>
+
+                                <div class="alert alert-danger" role="alert" style="display: none">
+                                    A simple danger alert—check it out!
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="modal-footer">
+                        <button class="btn btn-primary btn-lg" type="submit"><i class="la la-check"></i> Add Column</button>
+                        <button class="btn btn-secondary btn-lg" type="reset" data-dismiss="modal"><i class="la la-close"></i> Cancel</button>
+                    </div>
+                </div>
+
+            </form>
+
+        </div>
+    </div>
+
+    <!-- Intro Video modal-->
+    <div class="modal fade modal-xl" id="intro-video-modal" style="width: 100vw; max-width: 100vw" tabindex="-1" role="dialog">
+        <div class="modal-dialog mt-3" role="document" style="width: 96vw; max-width: 96vw">
+            <div class="modal-content" style="width: 96vw; max-width: 96vw">
+                <div class="modal-header">
+                    <p class="modal-title text-primary"><i class="la la-lg la-video"></i> Intro Video</p>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
+                    </button>
+                </div>
+                <video width="100%" controls autoplay>
+                </video>
+            </div>
+        </div>
+    </div>
+
+    <!-- edit record Modal -->
+    <div class="modal fade" id="edit-record-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Record</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <frmdb-form></frmdb-form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+    <!-- add element Modal -->
+    <div class="modal fade" id="add-element-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Record</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <frmdb-form></frmdb-form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <frmdb-add-element></frmdb-add-element>
+
+</body>
 </html>
