component editor working

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -140,7 +140,7 @@
 
         <frmdb-dom-tree></frmdb-dom-tree>
 
-        <frmdb-element-editor></frmdb-element-editor>
+        <frmdb-element-editor class="d-flex flex-column"></frmdb-element-editor>
     </div>
     <div id="canvas" class="position-relative overflow-hidden">
         <iframe></iframe>
