--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -79,8 +79,8 @@
     <div class="left-panel border-right shadow frmdb-dropdown-hover">
         <div class="d-flex justify-content-between"
             style="border-bottom: 1px solid #BDC3C7; background:linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%)">
-            <img src="/formuladb/img/logo.png" style="width: 90px; height: 28px;" />
-            <!-- <a class="btn btn-sm btn-outline-light m-2" href="javascript:void(0)" data-frmdb-action="showIntroVideoModal"><i class="la la-info"></i></a> -->
+            <img id="logo" src="/formuladb/img/logo.png" style="width: 90px; height: 28px;" />
+            <a class="btn btn-sm btn-outline-light m-2" href="javascript:void(0)" data-frmdb-action="showIntroVideoModal"><i class="la la-info"></i></a>
         </div>
 
         <ul class="nav flex-row flex-nowrap pl-1 border-bottom" style="min-height: 28px;">
