added sibling highlight and selector, needed to select img for card-img-overlay

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -138,7 +138,9 @@
             </li>
         </ul>
 
-        <frmdb-dom-tree></frmdb-dom-tree>
+        <div class="left-panel-tree border-top overflow-auto">
+            <frmdb-element-tree></frmdb-element-tree>
+        </div>
 
         <frmdb-element-editor class="d-flex flex-column"></frmdb-element-editor>
     </div>
