using bootstrap modal for add page element popup

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/formuladb-static/icons/line-awesome/css/line-awesome.min.css">
     <link rel="stylesheet" href="/formuladb-static/icons/flag-icons-css/css/flag-icon.min.css" />
     <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
-	<link rel="stylesheet" type="text/css" href="/formuladb/icons/icons.css" />
+	<link rel="stylesheet" type="text/css" href="/formuladb-icons/editor/icons.css" />
 </head>
 
 <body>
