started img-editor #119 and icon-editor #124

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/formuladb-static/icons/flag-icons-css/css/flag-icon.min.css" />
     <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
 	<link rel="stylesheet" type="text/css" href="/formuladb-icons/editor/icons.css" />
+    <link rel="stylesheet" href="/formuladb-static/icons/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -338,6 +339,8 @@
     </div>
     
     <frmdb-add-element></frmdb-add-element>
+    <frmdb-img-editor></frmdb-img-editor>
+    <frmdb-icon-editor></frmdb-icon-editor>
 
 </body>
 </html>
