--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -86,7 +86,7 @@
         </div>
 
         <ul class="nav flex-row flex-nowrap pl-1 border-bottom" style="min-height: 28px;">
-            <li class="nav-item">
+            <li class="nav-item" title="list of tables">
                 <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">
                     <i class="la la-table"></i>
                 </a>
@@ -113,7 +113,7 @@
         </ul>
 
         <ul class="nav flex-row flex-nowrap pl-1" style="min-height: 28px;">
-            <li class="nav-item">
+            <li class="nav-item" title="list of pages">
                 <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">
                     <i class="la la-image"></i>
                 </a>
