--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -47,7 +47,8 @@
                     </div>
                 </div>
                 <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
-                    <button class="btn btn-outline" id="frmdb-editor-app-version-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-outline" id="frmdb-editor-app-version-select" type="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
                         1
                     </button>
                     <div class="dropdown-menu" aria-labelledby="frmdb-editor-app-version-select">
@@ -115,10 +116,10 @@
                     <i class="la la-ellipsis-v"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="table-options">
-                    <a class="dropdown-item" id="new-table-btn" title="New App"><i class="la la-plus-circle"></i> New App</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" id="delete-table-btn" title="Clone this App" data-frmdb-prop="tableToDelete::$frmdb.selectedTableId"><i
-                            class="la la-copy"></i> Clone App <span data-frmdb-value="$frmdb.selectedTableId"></span></a>
+                    <a class="dropdown-item" id="new-app-btn" title="New App"><i class="la la-plus-circle"></i> New App</a>
+                    <!-- <div class="dropdown-divider"></div> -->
+                    <!-- <a class="dropdown-item" id="delete-table-btn" title="Clone this App" data-frmdb-prop="tableToDelete::$frmdb.selectedTableId"><i
+                            class="la la-copy"></i> Clone App <span data-frmdb-value="$frmdb.selectedTableId"></span></a> -->
                 </div>
             </li>
         </ul>
@@ -193,7 +194,7 @@
     <div class="modal fade" id="new-page-modal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
 
-            <form>
+            <form data-frmdb-ignore-form>
 
                 <div class="modal-content">
                     <div class="modal-header">
@@ -247,11 +248,67 @@
         </div>
     </div>
 
+
+
+    <!-- new App modal-->
+    <div class="modal fade" id="new-app-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+
+            <form data-frmdb-ignore-form>
+
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <p class="modal-title text-primary"><i class="la la-lg la-table"></i> New App</p>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
+                        </button>
+                    </div>
+
+                    <div class="modal-body text">
+
+                        <div class="form-group row" data-key="href">
+                            <label class="col-sm-3 control-label">App name</label>
+                            <div class="col-sm-9 input">
+                                <div>
+                                    <input name="appName" type="text" class="form-control" placeholder="New_App_Name" required pattern="[a-zA-Z_]+"
+                                        oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '_')">
+                                </div>
+
+                                <div class="alert alert-danger" role="alert" style="display: none">
+                                    A simple danger alert—check it out!
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group row" data-key="href">
+                            <label class="col-sm-3 control-label">App name</label>
+                            <div class="col-sm-9 input">
+                                <select name="basedOnApp" class="form-control">
+                                    <option>-</option>
+                                    <option data-frmdb-table="$frmdb.apps[]" data-frmdb-value="$frmdb.apps[]">app 1</option>
+                                </select>
+                            </div>
+
+                        </div>
+
+                        <div class="modal-footer">
+                            <button class="btn btn-primary btn-lg" type="submit"><i class="la la-check"></i> Create App</button>
+                            <button class="btn btn-secondary btn-lg" type="reset" data-dismiss="modal"><i class="la la-close"></i> Cancel</button>
+                        </div>
+                    </div>
+
+            </form>
+
+        </div>
+    </div>
+
+
+
     <!-- new Table modal-->
     <div class="modal fade" id="new-table-modal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
 
-            <form>
+            <form data-frmdb-ignore-form>
 
                 <div class="modal-content">
                     <div class="modal-header">
@@ -295,7 +352,7 @@
     <div class="modal fade" id="new-column-modal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
 
-            <form>
+            <form data-frmdb-ignore-form>
 
                 <div class="modal-content">
                     <div class="modal-header">
@@ -371,7 +428,7 @@
     <frmdb-add-element></frmdb-add-element>
     <frmdb-img-editor></frmdb-img-editor>
     <frmdb-icon-editor></frmdb-icon-editor>
-    
+
     <script src="/formuladb-env/plugins/vendor/js/jquery-3.3.1.slim.min.js"></script>
     <script src="/formuladb-env/plugins/vendor/js/popper.min.js"></script>
     <script src="/formuladb-env/plugins/vendor/js/bootstrap.min.js"></script>
